kubernetes/apps/app/deepseek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsh
  labels:
    app: dsh
spec:
  selector:
    app: dsh
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
